[package]
name = "boxarray"
version = "2.0.0"
edition = "2021"
authors = ["Nathan Touroux"]
description = "Safe way to allocate and initialize nested arrays directly on the heap in Rust."
homepage = "https://github.com/xayon40-12/boxarray.git"
repository = "https://github.com/xayon40-12/boxarray.git"
license = "MIT"
keywords = ["Box","arrays"]
categories = ["memory-management","rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cargo-husky = "1"